--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -1,49 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">            {{ encore_entry_link_tags('app') }}
-                <link rel="stylesheet" href="{{ asset('style.css') }}">
-           {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link
+		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		{% block stylesheets %}
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+			{{ encore_entry_link_tags('app') }}
+			<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+			<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Calligraffitti&family=Inter:wght@200&display=swap" rel="stylesheet">
+			<link rel="stylesheet" href="{{ asset('styles/App.css') }}">
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
 
-        {% block javascripts %}
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-     {% if app.user %}
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav mr-auto">
-    <li class="nav-item">
-    <a href="{{path('recipes_list') }}" class="nav-link active" aria-current="page">Recettes</a>
-    </li>
-     <li class="nav-item">
-     <a href="{{path('category_list')}}" class="nav-link active" aria-current="page">Catégories</a>
-    </li>
-    
-     <ul class="navbar-nav position-absolute bottom-0 end-0 mt-2">
-									<li class="nav-item me-5">
-     Vous êtes connecté en tant que {{ app.user.userIdentifier }}<a href="{{ path('app_logout') }}" class="nav-link active me-2" aria-current="page">Déconnexion</a>
-    </ul>
-    </li>
-     {% endif %}
-    </ul>
-    </div>
-    </nav>
-     </div>
-    </body>
-</html>
-   {% block body %}
-        
-        {% endblock %}
+		{% block javascripts %}
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</head>
+	<body>
+		{% if app.user %}
+			<nav class="navbar navbar-expand-xl navbar-light bg-light">
+				<div class="container-fluid">
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNavDropdown">
+						<ul class="navbar-nav mr-auto">
+							<li class="nav-item">
+								<a href="{{path('recipes_list') }}" class="nav-link active" aria-current="page">Recettes</a>
+							</li>
+							<li class="nav-item">
+								<a href="{{path('category_list')}}" class="nav-link active" aria-current="page">Catégories</a>
+							</li>
+							<ul class="navbar-nav position-absolute bottom-4 end-0">
+								<li class="nav-item me-5">
+									{{ app.user.userIdentifier }}
+								</li>
+							</ul>
+							<ul class="navbar-nav position-absolute bottom-0 end-0">
+								<li class="nav-item me-5">
+									<a href="{{ path('app_logout') }}" class="nav-link active me-2" aria-current="page" id="deconnect_link">Déconnexion</a>
+								</li>
+							</ul>
+						</ul>
+					</div>
+				</nav>
+			{% endif %}
+		</body>
+	</body>
+</html></div></body></html>{% block body %}{% endblock %}
