--- a/templates/admin/category_create.html.twig
+++ b/templates/admin/category_create.html.twig
@@ -1,15 +1,15 @@
 {% extends 'admin/base.html.twig' %}
 {% block body %}
-<section class="container my-2">
+	<section class="container my-2  justify-content-center">
 		<div class="row">
-			<div class="col">
-    <h1>Créer une nouvelle catégorie</h1>
+			<div class="col text-center m-4">
+				<h1>Catégorie</h1>
 
-  {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
-	</div>
+				{{ form_start(form) }}
+				{{ form_widget(form) }}
+				<button type="submit" class="btn btn-primary btn-lg my-4" id="button_create_register">Enregistrer</button>
+				{{ form_end(form) }}
+			</div>
 		</div>
-		</section>
+	</section>
 {% endblock %}
