--- a/templates/admin/recipe_create.html.twig
+++ b/templates/admin/recipe_create.html.twig
@@ -1,15 +1,14 @@
 {% extends 'admin/base.html.twig' %}
 {% block body %}
-<section class="container my-2">
-        <div class="row">
-		<div class="col">
-                        <h1>Créer une nouvelle recette</h1>
-        	        {{ form_start(form) }}
-                        {{form_row(form)}}
-                        <button type="submit" class="btn btn-primary btn-lg my-3">Enregistrer</button>
-        	        {{ form_end(form) }}
-	        </div>
+	<section class="container my-2  justify-content-center">
+		<div class="row">
+			<div class="col text-center m-4">
+				<h1 class="m-5">Recette</h1>
+				{{ form_start(form) }}
+				{{form_row(form)}}
+				<button type="submit" class="btn btn-primary btn-lg my-4" id="button_create_register">Enregistrer</button>
+				{{ form_end(form) }}
+			</div>
+		</div>
 	</div>
-</section>
-{% endblock %}
- 
+</section>{% endblock %}
